--- a/app/src/main/res/layout/activity_shape_draw.xml
+++ b/app/src/main/res/layout/activity_shape_draw.xml
@@ -2,16 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FF444444"
-    tools:context=".MainActivity"
-    android:id="@+id/frame">
+    tools:context="com.cs211d.joel.demodrawables.ShapeDrawActivity"
+    android:id="@+id/shapeFrame">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/next"
-        android:onClick="next"
-        android:text="Next"/>
-
+        android:text="Go To Move Shape"
+        android:onClick="goToMove"/>
 
 </RelativeLayout>
