--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="image_width">115px</dimen>
+    <dimen name="image_height">250dp</dimen>
+    <dimen name="shapeImage_width">250dp</dimen>
+    <dimen name="shapeImage_height">250dp</dimen>
+    <dimen name="shapeImage_padding">20dp</dimen>
 </resources>
