Added Bounds for Circles, and override  onMeasure of view class

--- a/app/src/main/res/layout/activity_move_shape.xml
+++ b/app/src/main/res/layout/activity_move_shape.xml
@@ -2,24 +2,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/moveFrame"
     tools:context="com.cs211d.joel.demodrawables.MoveShapeActivity">
 
-    <Button
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/moveFrame">
+    </RelativeLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/makeCircle"
-        android:text="Make Circle"
-        android:onClick="makeCircle"/>
+        android:id="@+id/bt_panel"
+        android:layout_alignParentBottom="true">
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/clear"
-        android:layout_below="@+id/makeCircle"
-        android:text="Clear"
-        android:onClick="clear"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/makeCircle"
+                android:text="Make Circle"
+                android:onClick="makeCircle"
+                android:layout_alignParentLeft="true"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/clear"
+                android:text="Clear"
+                android:onClick="clear"
+                android:layout_alignParentRight="true"/>
+
+        </RelativeLayout>
+
+    </FrameLayout>
+
+
+
 
 
 </RelativeLayout>
